# BMChatbot2

./: .railwayignore  Dockerfile  Pipfile  README.md  admin_panel.py  app.json  audio_handler.py  chatgpt_handler.py  config.py  data_handler.py  database.py  environment.yml  main.py  nixpacks.toml  pyproject.toml  requirements.txt  setup.py  telegram_bot_simple.py  users.csv
templates/: base.html  dashboard.html  login.html  user_detail.html  users.html
